Fix spacing on form elements

--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -7,7 +7,7 @@
   }
 
   &__field {
-    margin: 0 8px 16px;
+    margin-bottom: 16px;
     flex: 1;
 
     &--action {
@@ -31,6 +31,19 @@
 
     @include above(420px) {
       display: flex;
+
+      .form__field {
+        margin-left: 8px;
+        margin-right: 8px;
+
+        &:first-child {
+          margin-left: 0;
+        }
+
+        &:last-child {
+          margin-right: 0;
+        }
+      }
     }
   }
 }
