--- a/scss/components/_wrapper.scss
+++ b/scss/components/_wrapper.scss
@@ -10,7 +10,7 @@
   &--two-column {
 
     @include above($two-column-break) {
-      max-width: 740px;
+      max-width: 800px;
       display: flex;
       flex-direction: row-reverse;
 
